feat: set up initial backend and frontend application with core services, authentication, and UI screens.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ websockets
 passlib[bcrypt]
 python-jose[cryptography]
 python-multipart
+psycopg2-binary
+python-dotenv
+broadcaster
+sentry-sdk
+aioredis
