--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   file_picker: ^10.3.8
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
